--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,4 +406,22 @@
     background: #397F6A;
     color: #fff;
 }
+#backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 18px 21px;
+    background-color: #007E6A;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+#backToTopBtn.active {
+    display: block;
+    opacity: 1;
+}
 /* footer end  */
